bitfields/tests/compile_error_cases/bitfield_type_reference_type.rs
use bitfields::bitfield;

#[bitfield(&u8)]
pub struct Bitfield {
    a: u8,
}

fn main() {}
